unpackaged/main/default/objects/PagesApi__Page__c/PagesApi__Page__c.object-meta.xml
<CustomObject>
    <description>Stores the configurations for custom pages created in Fonteva&#39;s Publisher (PagesApi).</description>
    <label>Page</label>
    <nameField>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>