unpackaged/main/default/objects/PagesApi__Page__c/fields/OrderApi__Enable_Access_Permissions__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Access_Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked access to the Page is controlled by the related user-defined Access Permissions. Defaults unchecked - essentially enabling all public and authenticated Users access to the Page and related content.</description>
    <inlineHelpText>When checked access to the Page is controlled by the related user-defined Access Permissions. Defaults unchecked - essentially enabling all public and authenticated Users access to the Page and related content.</inlineHelpText>
    <label>Enable Access Permissions</label>
    <type>Checkbox</type>
</CustomField>