unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__Auth_Required__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Auth_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the Page will require a User to be authenticated either through the Customer Portal, Partner Portal, or Community. Defaults unchecked.</description>
    <inlineHelpText>When checked the Page will require a User to be authenticated either through the Customer Portal, Partner Portal, or Community. Defaults unchecked.</inlineHelpText>
    <label>Auth Required</label>
    <type>Checkbox</type>
</CustomField>