unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__Enable_SEF_URLs__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Enable_SEF_URLs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked URLs will be re-written into a user friendly format based on the configurations of the Site and Page &quot;Slug&quot; fields. Defaults unchecked.</description>
    <inlineHelpText>When checked URLs will be re-written into a user friendly format based on the configurations of the Site and Page &quot;Slug&quot; fields. Defaults unchecked.</inlineHelpText>
    <label>Enable SEF URLs</label>
    <type>Checkbox</type>
</CustomField>