unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__Form__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related form.</description>
    <inlineHelpText>Link to the related form.</inlineHelpText>
    <label>Form</label>
    <referenceTo>PagesApi__Form__c</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>