unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__Is_Published__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Page is made available either online or in the backend staff interface.</description>
    <inlineHelpText>When checked, the Page is made available either online or in the backend staff interface.</inlineHelpText>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>