unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__Menu__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Menu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related page menu configuration.</description>
    <inlineHelpText>Link to the related page menu configuration.</inlineHelpText>
    <label>Menu</label>
    <referenceTo>PagesApi__Menu__c</referenceTo>
    <relationshipLabel>Pages</relationshipLabel>
    <relationshipName>Pages</relationshipName>
    <type>Lookup</type>
</CustomField>