unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__No_Archive__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__No_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Google, Yahoo, and Bing will be instructed to not archive the page/cache the Page. Defaults unchecked.</description>
    <inlineHelpText>When checked, Google, Yahoo, and Bing will be instructed to not archive the page/cache the Page. Defaults unchecked.</inlineHelpText>
    <label>No Archive</label>
    <type>Checkbox</type>
</CustomField>