unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__No_Follow__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__No_Follow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Google, Yahoo, and Bing will be instructed to not follow and index any links on the Page. Defaults unchecked.</description>
    <inlineHelpText>When checked, Google, Yahoo, and Bing will be instructed to not follow and index any links on the Page. Defaults unchecked.</inlineHelpText>
    <label>No Follow</label>
    <type>Checkbox</type>
</CustomField>