unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__No_Index__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__No_Index__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Google, Yahoo, and Bing will be instructed to not include the Page in Search Engine Results. Defaults checked.</description>
    <inlineHelpText>When checked, Google, Yahoo, and Bing will be instructed to not include the Page in Search Engine Results. Defaults checked.</inlineHelpText>
    <label>No Index</label>
    <type>Checkbox</type>
</CustomField>