unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__Page_ID__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Page_ID__c</fullName>
    <description>Auto incrementing number used as an External ID for the Page.</description>
    <displayFormat>{00}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Auto incrementing number used as an External ID for the Page.</inlineHelpText>
    <label>Page ID</label>
    <type>AutoNumber</type>
</CustomField>