unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__Page_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Page_URL__c</fullName>
    <description>** System Calculated ** The URL for the page.</description>
    <inlineHelpText>** System Calculated ** The URL for the page.</inlineHelpText>
    <label>Page URL</label>
    <type>Url</type>
</CustomField>