unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__SEF_Slug__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__SEF_Slug__c</fullName>
    <description>Search Engine Friendly (SEF) &quot;Slug&quot; to use when re-writing URLs to improve usability and SEO.</description>
    <inlineHelpText>Search Engine Friendly (SEF) &quot;Slug&quot; to use when re-writing URLs to improve usability and SEO.</inlineHelpText>
    <label>SEF Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>