unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__Site__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to the Site where the Page will be published.</description>
    <inlineHelpText>** Required ** Link to the Site where the Page will be published.</inlineHelpText>
    <label>Site</label>
    <referenceTo>PagesApi__Site__c</referenceTo>
    <relationshipLabel>Pages</relationshipLabel>
    <relationshipName>Pages</relationshipName>
    <type>Lookup</type>
</CustomField>