unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__Site_Template_Key__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Site_Template_Key__c</fullName>
    <description>** System Calculated ** The template key used for the parent site.</description>
    <formula>PagesApi__Site__r.PagesApi__Site_Template_Key__c</formula>
    <inlineHelpText>** System Calculated ** The template key used for the parent site.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Text</type>
</CustomField>