unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__Theme__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to the theme to use for the Page.</description>
    <inlineHelpText>** Required ** Link to the theme to use for the Page.</inlineHelpText>
    <label>Theme</label>
    <referenceTo>PagesApi__Theme__c</referenceTo>
    <relationshipLabel>Pages</relationshipLabel>
    <relationshipName>Pages</relationshipName>
    <type>Lookup</type>
</CustomField>