unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__Title_Tag__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Title_Tag__c</fullName>
    <description>** Required ** HTML Title tag.</description>
    <inlineHelpText>** Required ** HTML Title tag.</inlineHelpText>
    <label>Title Tag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>