unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__Visualforce_Page__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Visualforce_Page__c</fullName>
    <description>The API name (with namespace) of the visualforce page referenced by this page configuration.</description>
    <inlineHelpText>The API name (with namespace) of the visualforce page referenced by this page configuration.</inlineHelpText>
    <label>Visualforce Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>