unpackaged/main/default/objects/PagesApi__Page__c/fields/PagesApi__Visualforce_Template__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Visualforce_Template__c</fullName>
    <description>** Required ** The Visualforce Page to use as the Template for the Page. Defaults to the value of the &quot;Default Visualforce Template&quot; configured for the related Site.</description>
    <inlineHelpText>** Required ** The Visualforce Page to use as the Template for the Page. Defaults to the value of the &quot;Default Visualforce Template&quot; configured for the related Site.</inlineHelpText>
    <label>Visualforce Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>